testdata/baselines/reference/tests_cases_conformance_types_tuple_contextualTypeWithTuple.ts.ast
SourceFile
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' numStrTuple'
        TupleType
          NumberKeyword
          StringKeyword
        ArrayLiteralExpression
          NumericLiteral
          StringLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' numStrTuple2'
        TupleType
          NumberKeyword
          StringKeyword
        ArrayLiteralExpression
          NumericLiteral
          StringLiteral
          TrueKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' numStrBoolTuple'
        TupleType
          NumberKeyword
          StringKeyword
          BooleanKeyword
        ArrayLiteralExpression
          NumericLiteral
          StringLiteral
          TrueKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' objNumTuple'
        TupleType
          TypeLiteral
            PropertySignature
              Identifier: ' a'
              StringKeyword
          NumberKeyword
        ArrayLiteralExpression
          ObjectLiteralExpression
            PropertyAssignment
              Identifier: ' a'
              StringLiteral
          NumericLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' strTupleTuple'
        TupleType
          StringKeyword
          TupleType
            NumberKeyword
            TypeLiteral
        ArrayLiteralExpression
          StringLiteral
          ArrayLiteralExpression
            NumericLiteral
            ObjectLiteralExpression
              PropertyAssignment
                Identifier: ' x'
                NumericLiteral
              PropertyAssignment
                Identifier: ' y'
                NumericLiteral
  ClassDeclaration
    Identifier: ' C'
  ClassDeclaration
    Identifier: ' D'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' unionTuple'
        TupleType
          TypeReference
            Identifier: 'C'
          UnionType
            StringKeyword
            NumberKeyword
        ArrayLiteralExpression
          NewExpression
            Identifier: ' C'
          StringLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' unionTuple1'
        TupleType
          TypeReference
            Identifier: 'C'
          UnionType
            StringKeyword
            NumberKeyword
        ArrayLiteralExpression
          NewExpression
            Identifier: ' C'
          StringLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' unionTuple2'
        TupleType
          TypeReference
            Identifier: 'C'
          UnionType
            StringKeyword
            NumberKeyword
          TypeReference
            Identifier: ' D'
        ArrayLiteralExpression
          NewExpression
            Identifier: ' C'
          StringLiteral
          NewExpression
            Identifier: ' D'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' unionTuple3'
        TupleType
          NumberKeyword
          UnionType
            StringKeyword
            NumberKeyword
        ArrayLiteralExpression
          NumericLiteral
          StringLiteral
  ExpressionStatement
    BinaryExpression
      Identifier: ' 

numStrTuple'
      EqualsToken
      Identifier: ' numStrTuple2'
  ExpressionStatement
    BinaryExpression
      Identifier: '
numStrTuple'
      EqualsToken
      Identifier: ' numStrBoolTuple'
  ExpressionStatement
    BinaryExpression
      Identifier: '

// error
objNumTuple'
      EqualsToken
      ArrayLiteralExpression
        ObjectLiteralExpression
        NumericLiteral
  ExpressionStatement
    BinaryExpression
      Identifier: '
numStrBoolTuple'
      EqualsToken
      Identifier: ' numStrTuple'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' strStrTuple'
        TupleType
          StringKeyword
          StringKeyword
        ArrayLiteralExpression
          StringLiteral
          StringLiteral
          NumericLiteral
  ExpressionStatement
    BinaryExpression
      Identifier: '

unionTuple'
      EqualsToken
      Identifier: ' unionTuple1'
  ExpressionStatement
    BinaryExpression
      Identifier: '
unionTuple'
      EqualsToken
      Identifier: ' unionTuple2'
  ExpressionStatement
    BinaryExpression
      Identifier: '
unionTuple2'
      EqualsToken
      Identifier: ' unionTuple'
  ExpressionStatement
    BinaryExpression
      Identifier: '
numStrTuple'
      EqualsToken
      Identifier: ' unionTuple3'
  TypeAliasDeclaration
    Identifier: ' test1'
    TupleType
      RestType
        ArrayType
          NumberKeyword
  TypeAliasDeclaration
    Identifier: ' fixed1'
    IntersectionType
      TypeReference
        Identifier: ' test1'
      TypeLiteral
        PropertySignature
          Identifier: ' length'
          LiteralType
            NumericLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' var1'
        TypeReference
          Identifier: ' fixed1'
        ArrayLiteralExpression
          NumericLiteral
          NumericLiteral
  TypeAliasDeclaration
    Identifier: ' EmptyTuple'
    TupleType
  InterfaceDeclaration
    Identifier: ' MyEmptyTuple'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' EmptyTuple'
    PropertySignature
      Identifier: ' extraInfo'
      QuestionToken
      AnyKeyword
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' withExtra'
        TypeReference
          Identifier: ' MyEmptyTuple'
        ArrayLiteralExpression
